--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "./dist",
+		"outDir": "dist",
+		"module": "CommonJs",
+    "target": "ES6",
 		"esModuleInterop": true,
     "strict": true
   },
